--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Lucas Gomes Santana">
     <meta name="keywords" content="Lucas Portifolio,Lucas Gomes Portifolio,Lucas Gomes Santana Portifolio,Lucas,Lucas Gomes,
     Lucas Gomes Santana,Portifolio,Como fazer um portifolio,O que é um portifolio?">
-    <meta name="description" content="Modelo de Portifolio do estudante de programação Lucas Gomes Santana"
+    <meta name="description" content="Modelo de Portifolio do estudante de programação Lucas Gomes Santana">
     <meta name="robots" content="index, follow">
     <title>Lucas Portifolio</title>
   </head>
